0022959: Accessing uninitialized variable (pointer): aCurElement